# Backup-application

./: .gitignore  Cargo.toml  LICENSE.md  README.md  backup_info.txt
config/: backup_info.json  backup_info.txt
src/: backup.rs  config.rs  config_gui.rs  confirm_gui.rs  error_gui.rs  gui.rs  launcher.rs  lib.rs  main.rs  mouse.rs  types.rs  utils.rs
src/sys/: linux.rs  macos.rs  windows.rs
