[package]
name = "emergency_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "macos")'.dependencies.core-graphics]
version = "0.22.1"
features = ["highsierra"]

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.6.3"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = ["windef"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.77"
x11 = "2.18.2"
time = "0.2.21"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[dependencies]
winit = "0.28"
eframe = "0.19"
egui = "0.19"
egui_extras = "0.19"
env_logger = "0.9"
log = "0.4"
rfd = "0.12"
image = "0.25.2"
winreg = "0.10"
sysinfo = "0.30"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
auto-launch = "0.5.0"
